--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
+
+:root {
+  --QuickSandFont: 'Quicksand', sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--QuickSandFont);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.QuickSandFont {
+  font-family: 'Quicksand', sans-serif;
 }
+
+@font-face {
+  font-family: 'Quicksand';
+  src: url('./assets/fonts/static/Quicksand-Medium.ttf') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
